# Ziolkovskyi_Dmytro_TV-21

./: .gitignore  README.md
lab1/: exemple.cpp  frequency_analysis.hpp  g.cpp
lab2/: CMakeLists.txt  gen1.cpp  gen2.cpp  merge.cpp
labs/: server.cpp
labs/res/: index.html
